Reader: Fix tab and text input overlap

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -17,7 +17,7 @@
 	background-color: $white;
 	position: fixed;
 	top: 0;
-	margin-top: 47px; // masterbar is exactly 47px
+	margin-top: 47px; // Masterbar is exactly 47px
 	padding-top: 30px;
 	z-index: 20;
 	-webkit-font-smoothing: subpixel-antialiased; // Fixes fixed elements text aliasing in Safari
@@ -30,6 +30,15 @@
 .search-stream .search-stream__input-card.card {
 	box-shadow: 0 0 0 2px $gray-lighten-20, 0 1px 2px $gray-lighten-20;
 	margin-bottom: 0;
+
+	.search__input-fade .search__input {
+		width: calc( 100% - 135px );
+	}
+
+	.search__input-fade::before {
+		right: 135px;
+		width: 35px;
+	}
 }
 
 .search-stream__input-card.card {
